# trustguard-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
executor/: Dockerfile  pyproject.toml
executor/app/: __init__.py  execution_store.py  kb_feature_policy.py  main.py  models.py  mq_agent_daemon.py  mq_execute_consumer.py  mq_worker.py  registry_validation.py  tools_registry.py
executor/app/core/: execution_context_allowlist.py  workspace_store.py
executor/app/micro_executor/: __init__.py  outputs.py  protocol.py  target_scope.py
executor/app/schemas/: __init__.py  mq_agent_daemon_argv.py  mq_execute_task.py
executor/app/skills/: __init__.py  base.py  dynamic_loader.py  external_script_skill.py  registry.py
executor/app/worker_daemon/: __init__.py  managed_session.py  proc_group.py  sniff_pool.py
orchestrator/: Dockerfile  pyproject.toml
orchestrator/app/: enums.py  kb_blog_purify.py  kb_embed_quota.py  kb_embed_quota_metrics.py  kb_experience_payload.py  kb_experience_promotion.py  kb_hierarchical_rag.py  kb_manual_admin.py  kb_pipeline_admin.py  kb_pipeline_nvd.py  kb_pipeline_runners.py  kb_query_purify.py  kb_retrieval_scoring.py  kb_static_tiers.py  main.py  models.py  orchestrator_sli_metrics.py  orchestrator_sli_snapshot.py  orchestrator_trace.py  plan_feature_flags.py  plan_models.py  plan_validation.py  skill_pack_models.py  structured_error_envelope.py
orchestrator/app/clients/: __init__.py  checkpoint_client.py  evidence_client.py  evidence_http_error.py  (+4 more)
orchestrator/config/: skill_policies.yaml
(+526 files in other folders)
