[project]
name = "trustguard-executor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.121.0",
    "uvicorn[standard]==0.30.0",
    "pydantic==2.9.0",
    "PyYAML>=6.0",
    "requests>=2.28.0",
    "redis[hiredis]>=5.0.0",
    "pika>=1.3.0",
]

[tool.uv]
package = false
