[project]
name = "trustguard-orchestrator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "fastapi==0.121.0",
    "uvicorn[standard]==0.30.0",
    "pydantic==2.9.0",
    "httpx>=0.27.0",
    "redis[hiredis]>=5.0.0",
    "pymysql>=1.1.0",
    "pika>=1.3.0",
    "qdrant-client",
    "langchain-openai",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.60",
    "tiktoken>=0.7.0",
    "jaraco-context>=6.1.0",
]

[tool.uv]
package = false
